Version 9.2 - xxxx edition. 14 December 2020

Added new ZX-Uno Prism video mode
Added Dandanator icon
Added TBBlue snx snapshot support
Added SamRam Gerton Lunter interface emulation
Added ZRCP commands:
-realtape-open

Improved CPC emulation: 
-Video scanlines rendering
-Joystick emulation
-Stereo emulation

Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously

Improved menu interface:
-Added action to minimize all windows

TBBlue: Fixed writing on divmmc memory when layer2 active

Fixed CPC bugs:
-Fixed vsync and hsync interrupts
-Fixed border colour
-Fixed AY chip register selection
-Fixed CRTC interrupts. After a CRTC interrupt with Z80 interrupts disabled, they were not fired when enabling Z80 interrupts
-Fixed setting bit 4 of the "Select screen mode and rom configuration" register of the Gate-Array and interrupt request

Fixed loading General Sound rom



Version 9.1 - Toi Acid Game edition. 26 November 2020

Added pc speaker audio driver (for Linux only)
Added General Sound emulation
Added compile setting to disable networking functions
Added date & time field info to ZSF snapshots
Added configuration & command line setting to save keymap type
Added some file converters: from SNA, SP, Z80, P, ZSF to SCR 


Improved QL emulation:
-Added sound emulation
-Guessing of file name extension
-Show all registers on Debug CPU window
-Support ZSF snapshots

Improved TBBlue emulation:
-Added emulation of tbblue joystick type (register 5)
-Added sprite zoom emulation
-Added relative sprites emulation
-Added sprite clipping emulation

Improved ZX Desktop: 
-Added direct buttons, to access menu items
-Added devices buttons/icons, to show device activity and device configuration
-Added F-key to close all open menus
-Reordered menu items
-Windows are not closed when changing ZX Desktop size
-Added new ZX Desktop fill types: RainbowAlive, Chess, Grid, Random
-Improved input number windows: added buttons to increase/decrease values