@@ -2,6 +2,8 @@
 alternaterom_aszmice07.rom - ASZMIC E07 ROM - ZX80/ZX81 Replacement ROM which includes assembler & debugger
 This rom is actually 4K long, but it starts at 4000H. So it is copied twice to be 8k length to work on ZX81
 
+alternaterom_ace.rom: TODO: pending description
+
 alternaterom_opense.rom  OpenSE BASIC Version 3.1.2, For Spectrum 48K
 http://sourceforge.net/projects/sebasic/
 
