@@ -6,6 +6,7 @@ Added TBBlue snx snapshot support
 Added SamRam Gerton Lunter interface emulation
 Added ZRCP commands:
 -realtape-open
+Added alternate Jupiter ACE rom: TODO: description
 
 Improved CPC emulation: 
 -Video scanlines rendering
@@ -13,6 +14,7 @@ Improved CPC emulation:
 -Stereo emulation
 
 Improved Debug I/O ports window: can now be backgrounded and it's reloaded continuously
+Improved File spooling: delay can now be any value between 20 and 2000 ms (in increments of +20)
 
 Improved menu interface:
 -Added action to minimize all windows
